Update:  -  add scrollbar  -  fix download issue  -  fix searchReasult

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -108,6 +108,7 @@
   overflow: auto;
   width: 100vw;
   max-width: 700px;
+  top: 50px;
 }
 .searchContainer {
   display: flex;
