--- a/styles/Stream.module.scss
+++ b/styles/Stream.module.scss
@@ -23,7 +23,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 80vw;
+  width: 100%;
   button {
     padding: 5px 10px;
     background-color: $nd;
@@ -98,7 +98,8 @@
 .downloadURL {
   padding: 4px;
   color: $main-text;
-  width: 85vw;
+  max-width: 85vw;
+  width: 100%;
   height: 100%;
   overflow: auto;
   margin: auto;
