--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,24 @@ a {
   box-sizing: border-box;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 0;
+@media only screen and (min-width: 765px) {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #222;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #222;
+  }
 }
